--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,7 +146,7 @@
 /* home section */
 .home-section{
     width: 100%;
-    height: 93vh;
+    min-height: 93vh;
     background-color: #a9a9a926;
 }
 /* navbar */
@@ -248,12 +248,12 @@
 }
 @media screen and (max-width:799px){
     .home-section{
-        height: 150vh;
+        min-height: 150vh;
     }
 }
 @media screen and (max-width:550px){
     .home-section{
-        height: 100vh;
+        min-height: 100vh;
     }
 }
 /* home content */
